<resources>
    <string name="app_name">Study App</string>
    //Memory card Strings
    <string name="deckTitleHint">Title of deck, ex. \"Capital Cities\"</string>
    <string name="deckSubjectHint">Subject of deck, ex. \"Geography\".</string>
    <string name="deckCreator">Create a New Deck of Memory Cards.</string>
    <string name="deckButton">GENERATE DECK</string>
    <string name="addQuestion">Add a question</string>
    <string name="addAnswer">Write the answer</string>
    <string name="createCard">CREATE CARD</string>
    <string name="StudyApp">BeautifulButton</string>
    <string name="back">BACK</string>
    <string name="save_note">SAVE NOTE</string>
    <string name="course_name">Course Name</string>
    <string name="create_new_deck">CREATE NEW DECK</string>
    <string name="choose_your_deck">Choose your deck</string>
    <string name="delete_decks_by_long_pressing_on_desired_deck">Delete decks by long pressing on desired deck</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="personal_page">PERSONAL PAGE</string>
    <string name="userName">John Userson</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="verify_password">Verify password</string>
    <string name="create_account">Create account</string>
    <string name="currently_empty">Currently empty…</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_username">Username</string>
    <string name="my_page">MY PAGE</string>
</resources>
