<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Tools.MemoryCards.CreateDeck">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:background="@drawable/ic_launcher_background"
        android:elevation="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="225dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/stud_orange" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/deckCreator"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.388"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="344dp"
        android:layout_height="185dp"
        android:layout_marginTop="132dp"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/deckTitleHint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingTop="16dp"
            android:text="Subject"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/subjectText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/deckSubjectHint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/flatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:drawableTop="@drawable/outline_style_white_36dp"
        android:onClick="generateDeck"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/deckButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="0.166" />

</androidx.constraintlayout.widget.ConstraintLayout>